// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dashboard V3 snapshots (token consistency) DashboardV3Client happy state matches snapshot (token-based layout) 1`] = `
<div>
  <div
    class="min-h-full bg-[var(--page-bg)] px-[var(--space-page-x)] py-[var(--space-page-y)] space-y-2"
  >
    <div
      class="flex flex-col gap-4 mx-auto max-w-[1600px]"
    >
      <header
        class="flex flex-col gap-3"
      >
        <div
          class="flex flex-col gap-3 md:flex-row md:items-start md:justify-between"
        >
          <div
            class="min-w-0 space-y-1"
          >
            <div
              class="text-[28px] font-semibold leading-tight text-[var(--text)]"
            >
              <h1
                class="text-[24px] font-semibold leading-tight text-[var(--text)]"
              >
                Dashboard
              </h1>
            </div>
          </div>
        </div>
      </header>
      <div
        class="grid gap-3 grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 items-stretch"
      >
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/inventory"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Inventory
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  42
                </div>
                <div
                  class="text-sm text-[var(--muted-text)]"
                >
                  +7 listed
                </div>
              </div>
            </div>
          </section>
        </a>
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/crm/opportunities"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Leads
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  10
                </div>
              </div>
            </div>
          </section>
        </a>
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/deals"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Deals
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  5
                </div>
              </div>
            </div>
          </section>
        </a>
        <a
          class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
          href="/lenders"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  BHPH
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <div
                class="space-y-2"
              >
                <div
                  class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
                >
                  0
                </div>
              </div>
            </div>
          </section>
        </a>
      </div>
      <div
        class="grid gap-3 xl:grid-cols-[minmax(0,1fr)_340px]"
      >
        <div
          class="grid gap-3 md:grid-cols-2 items-start"
        >
          <div
            class="flex flex-col gap-3 min-w-0"
          >
            <section
              class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
            >
              <div
                class="mb-4 flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0 space-y-1"
                >
                  <h3
                    class="text-base font-semibold text-[var(--text)]"
                  >
                    Customer Tasks
                  </h3>
                </div>
              </div>
              <div
                data-state="default"
              >
                <ul
                  class="space-y-0.5"
                >
                  <li>
                    <button
                      class="w-full text-left flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group min-h-[40px] py-2"
                      type="button"
                    >
                      <span
                        class="flex items-center gap-3 min-w-0"
                      >
                        <div
                          class="flex items-center gap-3 min-w-0"
                        >
                          <span
                            class="h-7 min-w-[36px] px-2 rounded-[8px] flex items-center justify-center text-sm font-semibold text-white bg-[var(--sev-info)] text-white"
                          >
                            3
                          </span>
                          <span
                            class="text-sm font-medium text-[var(--text)] truncate"
                          >
                            New Prospects
                          </span>
                        </div>
                      </span>
                      <span
                        class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                      >
                        <div
                          class="flex items-center gap-2 text-xs text-[var(--text-soft)]"
                        >
                          <span>
                            3
                          </span>
                          <span>
                            •
                          </span>
                          <span>
                            3
                             Total
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="opacity-0 group-hover:opacity-100 transition"
                        >
                          →
                        </span>
                      </span>
                    </button>
                  </li>
                  <li>
                    <button
                      class="w-full text-left flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group min-h-[40px] py-2"
                      type="button"
                    >
                      <span
                        class="flex items-center gap-3 min-w-0"
                      >
                        <div
                          class="flex items-center gap-3 min-w-0"
                        >
                          <span
                            class="h-7 min-w-[36px] px-2 rounded-[8px] flex items-center justify-center text-sm font-semibold text-white bg-[var(--sev-info)] text-white"
                          >
                            2
                          </span>
                          <span
                            class="text-sm font-medium text-[var(--text)] truncate"
                          >
                            Follow-ups
                          </span>
                        </div>
                      </span>
                      <span
                        class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                      >
                        <div
                          class="flex items-center gap-2 text-xs text-[var(--text-soft)]"
                        >
                          <span>
                            2
                          </span>
                          <span>
                            •
                          </span>
                          <span>
                            2
                             Total
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="opacity-0 group-hover:opacity-100 transition"
                        >
                          →
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </section>
            <section
              class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
            >
              <div
                class="mb-4 flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0 space-y-1"
                >
                  <h3
                    class="text-base font-semibold text-[var(--text)]"
                  >
                    Floorplan & Lending
                  </h3>
                </div>
              </div>
              <div
                data-state="default"
              >
                <p
                  class="text-sm text-[var(--text-soft)]"
                >
                  No floor plan data
                </p>
              </div>
            </section>
            <section
              class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
            >
              <div
                class="mb-4 flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0 space-y-1"
                >
                  <h3
                    class="text-base font-semibold text-[var(--text)]"
                  >
                    Finance Notices
                  </h3>
                </div>
              </div>
              <div
                data-state="default"
              >
                <p
                  class="text-sm text-[var(--text-soft)]"
                >
                  Funding and title notifications appear here.
                </p>
              </div>
            </section>
          </div>
          <div
            class="flex flex-col gap-3 min-w-0"
          >
            <section
              class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
            >
              <div
                class="mb-4 flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0 space-y-1"
                >
                  <h3
                    class="text-base font-semibold text-[var(--text)]"
                  >
                    Inventory Alerts
                  </h3>
                </div>
              </div>
              <div
                data-state="default"
              >
                <ul
                  class="space-y-0.5"
                >
                  <li>
                    <button
                      class="w-full text-left min-h-[44px] flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group"
                      type="button"
                    >
                      <span
                        class="flex items-center gap-3 min-w-0"
                      >
                        <div
                          class="flex items-center gap-3 min-w-0"
                        >
                          <span
                            class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[10px] text-xs font-bold tabular-nums text-white bg-[var(--sev-warning)] text-white"
                          >
                            1
                          </span>
                          <span
                            class="text-sm font-medium text-[var(--text)] truncate"
                          >
                            Cars in recon
                          </span>
                        </div>
                      </span>
                      <span
                        class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                      >
                        <div
                          class="flex items-center gap-2 text-xs text-[var(--muted-text)]"
                        >
                          <span>
                            1
                          </span>
                          <span>
                            •
                          </span>
                          <span>
                            1
                             Total
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="opacity-0 group-hover:opacity-100 transition"
                        >
                          →
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </section>
            <section
              class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
            >
              <div
                class="mb-4 flex items-start justify-between gap-3"
              >
                <div
                  class="min-w-0 space-y-1"
                >
                  <h3
                    class="text-base font-semibold text-[var(--text)]"
                  >
                    Deal Pipeline
                  </h3>
                </div>
              </div>
              <div
                data-state="default"
              >
                <ul
                  class="space-y-0.5"
                >
                  <li>
                    <button
                      class="w-full text-left min-h-[44px] flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group"
                      type="button"
                    >
                      <span
                        class="flex items-center gap-3 min-w-0"
                      >
                        <div
                          class="flex items-center gap-3 min-w-0"
                        >
                          <span
                            class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[10px] text-xs font-bold tabular-nums text-white bg-[var(--accent-deals)] text-white"
                          >
                            2
                          </span>
                          <span
                            class="text-sm font-medium text-[var(--text)] truncate"
                          >
                            Pending deals
                          </span>
                        </div>
                      </span>
                      <span
                        class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                      >
                        <div
                          class="flex items-center gap-2 text-xs text-[var(--muted-text)]"
                        >
                          <span>
                            2
                          </span>
                          <span>
                            •
                          </span>
                          <span>
                            2
                             Total
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="opacity-0 group-hover:opacity-100 transition"
                        >
                          →
                        </span>
                      </span>
                    </button>
                  </li>
                  <li>
                    <button
                      class="w-full text-left min-h-[44px] flex items-center justify-between rounded-[12px] px-2 -mx-2 transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)] hover:bg-[var(--surface-2)]/60 group"
                      type="button"
                    >
                      <span
                        class="flex items-center gap-3 min-w-0"
                      >
                        <div
                          class="flex items-center gap-3 min-w-0"
                        >
                          <span
                            class="flex h-7 w-7 shrink-0 items-center justify-center rounded-[10px] text-xs font-bold tabular-nums text-white bg-[var(--sev-danger)] text-white"
                          >
                            0
                          </span>
                          <span
                            class="text-sm font-medium text-[var(--text)] truncate"
                          >
                            Funding issues
                          </span>
                        </div>
                      </span>
                      <span
                        class="flex items-center gap-2 shrink-0 text-xs text-[var(--muted-text)]"
                      >
                        <div
                          class="flex items-center gap-2 text-xs text-[var(--muted-text)]"
                        >
                          <span>
                            0
                          </span>
                          <span>
                            •
                          </span>
                          <span>
                            0
                             Total
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="opacity-0 group-hover:opacity-100 transition"
                        >
                          →
                        </span>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </section>
          </div>
        </div>
        <aside
          class="flex flex-col gap-3 min-w-0"
        >
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Recommended Actions
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <ul
                class="space-y-3"
              >
                <li
                  class="rounded-[14px] border border-[var(--border)] bg-[var(--surface-2)] p-4"
                >
                  <div
                    class="flex gap-3"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-triangle-alert h-5 w-5 shrink-0 text-[var(--muted-text)] text-[var(--sev-warning)]"
                      fill="none"
                      height="20"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                      />
                      <path
                        d="M12 9v4"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    <div
                      class="min-w-0 flex-1"
                    >
                      <div
                        class="text-sm font-semibold text-[var(--text)]"
                      >
                        1 vehicles in recon
                      </div>
                      <button
                        class="inline-flex items-center justify-center font-medium border transition-colors focus-visible:outline focus-visible:ring-2 focus-visible:ring-[var(--accent)] focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-[var(--muted)] text-[var(--text)] hover:bg-[var(--muted)]/80 border-[var(--border)] px-2.5 py-1.5 text-sm rounded mt-2 h-8 rounded-[12px] border border-[var(--border)] bg-[var(--surface)] focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
                        type="button"
                      >
                        Review
                      </button>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </section>
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Upcoming Appointments
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <p
                class="text-sm text-[var(--text-soft)]"
              >
                No upcoming appointments.
              </p>
            </div>
          </section>
          <section
            class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
          >
            <div
              class="mb-4 flex items-start justify-between gap-3"
            >
              <div
                class="min-w-0 space-y-1"
              >
                <h3
                  class="text-base font-semibold text-[var(--text)]"
                >
                  Quick Actions
                </h3>
              </div>
            </div>
            <div
              data-state="default"
            >
              <p
                class="text-sm text-[var(--text-soft)]"
              >
                No actions available.
              </p>
            </div>
          </section>
        </aside>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      aria-label="Notifications (F8)"
      class="fixed bottom-4 left-4 right-4 z-[100] flex max-h-screen flex-col-reverse gap-2 p-0 sm:left-auto sm:right-4 sm:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Dashboard V3 snapshots (token consistency) MetricCard matches snapshot (uses token classes) 1`] = `
<a
  class="block rounded-[var(--radius-card)] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[var(--ring)]"
  href="/inventory"
>
  <section
    class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
  >
    <div
      class="mb-4 flex items-start justify-between gap-3"
    >
      <div
        class="min-w-0 space-y-1"
      >
        <h3
          class="text-base font-semibold text-[var(--text)]"
        >
          Inventory
        </h3>
      </div>
    </div>
    <div
      data-state="default"
    >
      <div
        class="space-y-2"
      >
        <div
          class="text-[40px] font-bold leading-none tabular-nums text-[var(--text)]"
        >
          182
        </div>
        <div
          class="text-sm text-[var(--muted-text)]"
        >
          +12 listed
        </div>
      </div>
    </div>
  </section>
</a>
`;

exports[`Dashboard V3 snapshots (token consistency) WidgetCard with rows matches snapshot (uses token classes) 1`] = `
<section
  class="rounded-[var(--radius-card)] border border-[var(--border)] bg-[var(--surface)] p-5 shadow-[var(--shadow-card)] h-full"
>
  <div
    class="mb-4 flex items-start justify-between gap-3"
  >
    <div
      class="min-w-0 space-y-1"
    >
      <h3
        class="text-base font-semibold text-[var(--text)]"
      >
        Customer Tasks
      </h3>
    </div>
  </div>
  <div
    data-state="default"
  >
    <ul>
      <li>
        Row one
      </li>
      <li>
        Row two
      </li>
    </ul>
  </div>
</section>
`;
